--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <style>
             body{
                 margin: 0;
+                border: 10px solid rgb(6, 96, 180);
             }
             img{
                 max-width: 100%;
